fixed icon alignment

--- a/src/app/pages/debrief/components/vehicle-checks-card/vehicle-checks-card.scss
+++ b/src/app/pages/debrief/components/vehicle-checks-card/vehicle-checks-card.scss
@@ -5,3 +5,10 @@
       min-width: 25px;
   }
 }
+
+.boolean-icon {
+  width: 22px;
+  height: 22px;
+  min-width: 22px;
+  padding: 0 4px 4px;
+}
